revised version of the paper

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -558,6 +558,8 @@ This section is split into three parts. The setup is described in Section~\ref{E
 
 ESBMC v$2$.$0$ running on a $64$-bit Ubuntu $14$.$04$.$1$ LTS operating system was used. A parallel approach of the ESBMC-SS, ESBMC-PS, ESBMC-PB were implemented in C$++$11. Version $2$.$0$.$1$ of Boolector SMT-solver, as shown in~\cite{Brummayer2009} (freely available) was used as the default solver for ESBMC. ESBMC-$\nu$Z as a built-in tool to Z3 was also used, as shown in~\cite{Bjorner2014}.  For ILP and GA formulations, MATLAB R$2013$a from MathWorks with Parallel Computing Toolbox was used, as shown in~\cite{TheMathWorks2013}. MATLAB is a dynamically typed high-level language, known as the state-of-the-art mathematical software, as shown in~\cite{Tranquillo2011} and is widely used by the engineering community, as shown in~\cite{Hong2010}.
 
+\textcolor{blue}{We have to point out that the experimental results presented here depend on the computer’s processor and memory, the version of each tool (MATLAB and ESBMC), and the partitioning problem to be solved. Additionally, any change from MATLAB to another tool or to GA/ILP libraries for different programming languages can influence the measured time of the algorithms.}
+
 All experiments were conducted on an otherwise idle Intel Core i$7$-$2600$ ($8$-cores), with $3$.$4$ GHz and $24$ GB of RAM, running Ubuntu $64$-bits. Each time was measured $3$ times (average taken). Based on standard deviation and tolerance interval to each set of time sample, it was obtained a statistical confidence of $91.7$\% to ESBMC (sequential, SS, PB and $\nu$Z), $95.9$\% to ESBMC-PS, and $92.0$\% to ILP and GA. A timeout condition (TO) is reached when the verification time is longer than $3600$ seconds. A memory-out (MO) occurs when the tool reaches $15$ GB of memory. \textcolor{blue}{The TO was defined based on previous empirical tests, where a larger TO ({\it e.g.}, $5000$ seconds) did not produce substantial differences in the experimental results.} 
 
 %----------------------------------------------
@@ -611,6 +613,8 @@ There is no single tool for efficiently solving all HW-SW partitioning benchmark
 In contrast to ESBMC-$\nu$Z, ILP solves $5$ out of $7$ benchmarks. When ILP produces a result, it provides the optimal solution. On the one hand, ILP execution time is slower than $\nu$Z in all benchmarks, which are supported by ESBMC-$\nu$Z. On the other hand, ILP is faster than ESBMC-SS, ESBMC-PS, and ESBMC-PB in all benchmarks, except for the clustering.
 
 Note further that all multi-core ESBMC implementations produce better results than the sequential one. In particular, ESBMC-PB implementation outperforms all other multi-core ESBMC approaches, where its performance improves as the number of nodes and edges increase. One notable case is the clustering benchmark, when verified by ESBMC-PB, it executes $3$ times faster than ILP and $2$.$5$ times slower than ESBMC-$\nu$Z. However, when the amount of nodes is around $30$, ESBMC-PB does not outperform ESBMC-$\nu$Z and ILP tools. When analyzing all benchmarks, ESBMC-PB produces TO for RC$6$, Fuzzy, and Mars; however, the results are still promising if we take into consideration that $\nu$Z and Matlab are state-of-the-art tools with respect to optimization problems.
+
+\textcolor{blue}{Regarding the amount of MO of sequential ESBMC, it has to explore all the states until to find out the answer of HW-SW partitioning, and it starts from an extreme where all the variables are selected as software, and go testing incrementally one by one. In the other hand, all the multi-core ESBMCs and SBMC-$\nu$Z, are optimized to reach faster the result, without the need to explore the states as sequential ESBMC does. Therefore, when the partitioning problem grows in complexity is natural do reach MO with sequential ESBMC.}
 
 \begin{table*}[ht]
   \centering
@@ -725,9 +729,11 @@ The clustering benchmark seems to be the limit to test the ESBMC (described) imp
 \label{Conclusions}
 %----------------------------------------------
 
-We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. Below that, the best solution turns out to be ESBMC-$\nu$Z since its execution time is faster and notorious. ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
+We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is faster and its result precise.} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
 
-If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. However, ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. Experimental results also pointed to an improvement of ESBMC, when using a parallel approach. In particular, all three parallel approaches described in this paper produced expressive results. The fastest ESBMC approaches is ESBMC-PB, which produces good results for an intermediate amount of edges and nodes. Thus, considering that nowadays processors have more and more cores, when modeling the problem, it is possible to consider multi-core model checking as an alternative to solve the HW-SW partitioning problem. 
+If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. \textcolor{blue}{However, ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. However, it is possible to use free GA and ILP libraries (BSD-Style and MIT licenses) as well.} 
+
+Experimental results also pointed to an improvement of ESBMC, when using a parallel approach. The fastest ESBMC approach is ESBMC-PB, which produces good results for an intermediate amount of edges and nodes. Thus, considering that nowadays processors have more and more cores, when modeling the problem, it is possible to consider multi-core model checking as an alternative to solve the HW-SW partitioning problem. 
 
 Finally, there is an issue about $150$ nodes problem, since it seems to be the limit of multi-core ESBMC. However, it really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for larger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the search space size. In future work, we will address improvements in ESBMC to remove the parallel layer on top of ESBMC and implement it during symbolic execution so that we can optimize the overall verification time.
 
