[A-25] What is the reason to obtain MO in ESBMC but not in ESMBC-(SS|PS|PB|vZ)? I think that it should be analyzed.

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -614,7 +614,7 @@ In contrast to ESBMC-$\nu$Z, ILP solves $5$ out of $7$ benchmarks. When ILP prod
 
 Note further that all multi-core ESBMC implementations produce better results than the sequential one. In particular, ESBMC-PB implementation outperforms all other multi-core ESBMC approaches, where its performance improves as the number of nodes and edges increase. One notable case is the clustering benchmark, when verified by ESBMC-PB, it executes $3$ times faster than ILP and $2$.$5$ times slower than ESBMC-$\nu$Z. However, when the amount of nodes is around $30$, ESBMC-PB does not outperform ESBMC-$\nu$Z and ILP tools. When analyzing all benchmarks, ESBMC-PB produces TO for RC$6$, Fuzzy, and Mars; however, the results are still promising if we take into consideration that $\nu$Z and Matlab are state-of-the-art tools with respect to optimization problems.
 
-\textcolor{blue}{Regarding the amount of MO of sequential ESBMC, it has to explore all the states until to find out the answer of HW-SW partitioning, and it starts from an extreme where all the variables are selected as software, and go testing incrementally one by one. In the other hand, all the multi-core ESBMCs and SBMC-$\nu$Z, are optimized to reach faster the result, without the need to explore the states as sequential ESBMC does. Therefore, when the partitioning problem grows in complexity is natural do reach MO with sequential ESBMC.}
+\textcolor{blue}{Regarding the amount of MOs, the sequential ESBMC approach has to explore all (possible) states until it finds the HW-SW partitioning solution; it starts from an extreme, where all variables are selected as software, and then incrementally tests one by one to check whether a given node will be implemented in software or in hardware. In contrast, all multi-core ESBMC approaches and ESBMC-$\nu$Z, are optimized to reach faster the HW/SW partitioning solution than the sequential one, without the need for exploring all states as the sequential ESBMC approach does. As a result, if the HW/SW partitioning problem grows in complexity, then the sequential ESBMC approach tends to easily reach MO due to the state-space explosion.}
 
 \begin{table*}[ht]
   \centering
