--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -731,7 +731,7 @@ The clustering benchmark seems to be the limit to test the ESBMC (described) imp
 
 We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is faster and its result is precise.} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
 
-If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. \textcolor{blue}{However, ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. However, it is possible to use free GA and ILP libraries (BSD-Style and MIT licenses) as well.} 
+If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. \textcolor{blue}{ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. Similarly, it is also possible to use free GA and ILP libraries (BSD-Style and MIT licenses) for different programing languages.} 
 
 Experimental results also pointed to an improvement of ESBMC, when using a parallel approach. The fastest ESBMC approach is ESBMC-PB, which produces good results for an intermediate amount of edges and nodes. Thus, considering that nowadays processors have more and more cores, when modeling the problem, it is possible to consider multi-core model checking as an alternative to solve the HW-SW partitioning problem. 
 
